CHANGES for LIRE
================

2014-03-05
==========
  - Fixed LireDemo bugs based on comments of Martha Larson's students from TU Delft:
    * Re-sized large images to prevent out-of-memory errors
    * Adapted error message to let people know they have to create a local feature histogram prior to searching for it.

2013-10-29
==========
  - Doubled PHOG & Canny Edge Detector extraction speed (with Carlos Perez Lara)

2013-10-22
==========
  - Added difference of Gaussians method to ImageUtils and unit test

2013-10-14
==========
  - Added constructor to GenericDocumentBuilder to allow for selection of Hashing algorithm.
  - Added some test files to excludes in compile task in the ant file.

2013-10-01
==========
  - Fixed bugs in Canny Edge Detector implementation
  - Fixed the same bugs in PHOG

2013-09-30
==========
  - Added convenience methods to VLADBuilder (indexMissing, etc.)
  - Added GenericByteLireFeature and renamed generic feature to
    net.semanticmetadata.lire.imageanalysis.GenericDoubleLireFeature


2013-09-27
==========
  - Added a preliminary implementation of the VLAD descriptor (net.semanticmetadata.lire.imageanalysis.bovw.VLADBuilder)
    It's working, but not all features are available right now. Performance on the Wang data set is slightly better than
    Edge Histogram, and slightly worse than PHOG. On the UCID data set it's quite in the middle.

2013-09-20
==========
  - Added pixel clustering quantization method in package net.semanticmetadata.lire.utils.cv
  - Added fast bilateral filtering based on the code from Frederic Langlet - https://code.google.com/p/kanzi/
  - Added generic double[] k-means in package net.semanticmetadata.lire.utils.cv

2013-09-17
==========
  - Updated to Lucene 4.4.0

2013-09-13
==========
  - Fixed bug in ColorLayout distance metric
  - Fixed bug in JCD re-use
  - Fixed handling of "white only" images in trim(...) function.

2013-08-08
==========