@@ -65,7 +65,7 @@ public class CEDD implements LireFeature {
     private double T2;
     private double T3;
     private boolean Compact = false;
-//    protected double[] data = new double[144];
+    //    protected double[] data = new double[144];
     protected byte[] histogram = new byte[144];
     int tmp;
     // for tanimoto:
@@ -111,19 +111,41 @@ public class CEDD implements LireFeature {
         int[][] ImageGridRed = new int[width][height];
         int[][] ImageGridGreen = new int[width][height];
         int[][] ImageGridBlue = new int[width][height];
-        int NumberOfBlocks = 1600;
-        int Step_X = (int) Math.floor(width / Math.sqrt(NumberOfBlocks));
-        int Step_Y = (int) Math.floor(height / Math.sqrt(NumberOfBlocks));
 
-        if ((Step_X % 2) != 0) {
-            Step_X = Step_X - 1;
-        }
-        if ((Step_Y % 2) != 0) {
-            Step_Y = Step_Y - 1;
+
+
+//please double check from here
+        int NumberOfBlocks = -1;
+
+        if (Math.min(width, height) >= 80) NumberOfBlocks = 1600;
+        if (Math.min(width, height) < 80 && Math.min(width, height) >= 40) NumberOfBlocks = 400;
+        if (Math.min(width, height) < 40) NumberOfBlocks = -1;
+
+
+        int Step_X = 2;
+        int Step_Y = 2;
+
+        if (NumberOfBlocks > 0)
+        {
+            Step_X =  (int)Math.floor(width / Math.sqrt(NumberOfBlocks));
+            Step_Y = (int)Math.floor(height / Math.sqrt(NumberOfBlocks));
+
+            if ((Step_X % 2) != 0)
+            {
+                Step_X = Step_X - 1;
+            }
+            if ((Step_Y % 2) != 0)
+            {
+                Step_Y = Step_Y - 1;
+            }
+
+
         }
 
-        if (Step_Y < 2) Step_Y = 2;
-        if (Step_X < 2) Step_X = 2;
+
+
+// to here
+
 
         int[] Edges = new int[6];
 
@@ -156,8 +178,26 @@ public class CEDD implements LireFeature {
 
         int MeanRed, MeanGreen, MeanBlue;
 
-        for (int y = 0; y < height - Step_Y; y += Step_Y) {
-            for (int x = 0; x < width - Step_X; x += Step_X) {
+//plase double check from here
+
+        int TempSum = 0;
+        double Max = 0;
+
+        int TemoMAX_X = Step_X * (int)Math.floor(image.getWidth() >> 1);
+        int TemoMAX_Y = Step_Y * (int)Math.floor(image.getHeight() >> 1);
+
+        if (NumberOfBlocks > 0)
+        {
+            TemoMAX_X = Step_X * (int)Math.sqrt(NumberOfBlocks);
+            TemoMAX_Y = Step_Y * (int)Math.sqrt(NumberOfBlocks);
+        }
+
+
+
+//to here
+
+        for (int y = 0; y < TemoMAX_Y; y += Step_Y) {
+            for (int x = 0; x < TemoMAX_X; x += Step_X) {
 
 
                 MeanRed = 0;
@@ -180,7 +220,7 @@ public class CEDD implements LireFeature {
                     }
                 }
 
-                int TempSum = 0;
+                TempSum = 0;
 
                 for (int i = y; i < y + Step_Y; i++) {
                     for (int j = x; j < x + Step_X; j++) {
@@ -212,7 +252,7 @@ public class CEDD implements LireFeature {
                 MaskValues.Mask4 = Math.abs(PixelsNeighborhood.Area1 * Math.sqrt(2) + PixelsNeighborhood.Area2 * 0 + PixelsNeighborhood.Area3 * 0 + PixelsNeighborhood.Area4 * -Math.sqrt(2));
                 MaskValues.Mask5 = Math.abs(PixelsNeighborhood.Area1 * 0 + PixelsNeighborhood.Area2 * Math.sqrt(2) + PixelsNeighborhood.Area3 * -Math.sqrt(2) + PixelsNeighborhood.Area4 * 0);
 
-                double Max = Math.max(MaskValues.Mask1, Math.max(MaskValues.Mask2, Math.max(MaskValues.Mask3, Math.max(MaskValues.Mask4, MaskValues.Mask5))));
+                Max = Math.max(MaskValues.Mask1, Math.max(MaskValues.Mask2, Math.max(MaskValues.Mask3, Math.max(MaskValues.Mask4, MaskValues.Mask5))));
 
                 MaskValues.Mask1 = MaskValues.Mask1 / Max;
                 MaskValues.Mask2 = MaskValues.Mask2 / Max;
@@ -358,7 +398,7 @@ public class CEDD implements LireFeature {
     }
 
     @SuppressWarnings("unused")
-	private double scalarMult(double[] a, double[] b) {
+    private double scalarMult(double[] a, double[] b) {
         double sum = 0.0;
         for (int i = 0; i < a.length; i++) {
             sum += a[i] * b[i];
